fix text alignment
https://github.com/SIWECOS/webapp/issues/38

--- a/src/templates/siwecos/scss/modules/scanoverview.scss
+++ b/src/templates/siwecos/scss/modules/scanoverview.scss
@@ -129,6 +129,7 @@
                     align-items: center;
                     -ms-flex-align: center;
                     color: black;
+                    text-align: left;
                     .testheading__icon {
                       display: block;
                       width: 16px;
